k8s/l3gl-devops.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-api
  namespace: devops-l3gl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-api
  template:
    metadata:
      labels:
        app: product-api
    spec:
      containers:
        - name: product-api
          image: pape2025/product-api:latest
          ports:
            - containerPort: 8086
          resources:
            requests:
              cpu: "200m"
              memory: "250Mi"
            limits:
              cpu: "400m"
              memory: "500Mi"
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8086
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8086
            initialDelaySeconds: 90
            periodSeconds: 20
            failureThreshold: 5

---

apiVersion: v1
kind: Service
metadata:
  name: product-api-service
  namespace: devops-l3gl
spec:
  selector:
    app: product-api
  ports:
    - protocol: TCP
      port: 8086
      targetPort: 8086
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-api-ingress
  namespace: devops-l3gl
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /l3gl(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: product-api-service
                port:
                  number: 8086
